--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat</title>
-    <script src="src/index.js" type="module"></script>
 </head>
 <body>
     <div id="root"></div>
+    <script src="../src/index.js" type="module"></script>
 </body>
 </html>
